*** empty log message ***

--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -1064,8 +1064,9 @@ status values to neighbouring modules.
 
 
 \subsection{Operators}
+\index{ned!expressions!operators}
 
-The set of operators supported in NED is similar to C/C++\index{ned!expressions!operators},
+The operators supported in NED are similar to C/C++ operators,
 with the following differences:
 
 \begin{itemize}
