*** empty log message ***

--- a/doc/src/manual/ch-introduction.tex
+++ b/doc/src/manual/ch-introduction.tex
@@ -219,13 +219,13 @@ The manual is organized the following way:
     from which documentation can be generated.
   \item{The following chapters,
     \ref{cha:building-simulation-programs},
-    \ref{cha:running-the-simulation} and
+    \ref{cha:run-sim} and
     \ref{cha:analyzing-simulation-results} deal with practical issues
     like building and running simulations and analyzing results, and
     present the tools {\opp} has to support these tasks.}
   \item{Chapter \ref{cha:parallel-execution} is devoted to the support
     for distributed execution.}
-  \item{Finally, Chapter \ref{cha:the-design-of-omnet} explains the
+  \item{Finally, Chapter \ref{cha:opp-design} explains the
     architecture and the internals of {\opp}. This chapter will be
     useful to those who want to extend the capabilities of the
     simulator or want to embed it into a larger application.}
