--- a/doc/src/manual/ch-overview.tex
+++ b/doc/src/manual/ch-overview.tex
@@ -67,7 +67,7 @@ type.
 Module types can be stored in files separately from the place
 of their actual usage. This means that the user can group existing
 module types and create \textit{component libraries}\index{module!libraries}. This feature
-will be discussed later, in Chapter \ref{cha:running-the-simulation}.
+will be discussed later, in Chapter \ref{cha:run-sim}.
 
 
 
