--- a/doc/src/manual/ch-run-sim.tex
+++ b/doc/src/manual/ch-run-sim.tex
@@ -1,5 +1,5 @@
-\chapter{Running The Simulation}
-\label{cha:running-the-simulation}
+\chapter{Configuring and Running Simulations}
+\label{cha:run-sim}
 
 \section{User interfaces}
 
