--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -1125,28 +1125,28 @@ Here's the complete list of operators, in order of decreasing precendence:
 \begin{longtable}{|l|l|}
 \hline
 \tabheadcol
-\tbf{Operator}          & \tbf{Meaning} \\\hline
+\tbf{Operator}                   & \tbf{Meaning} \\\hline
 %%
--, !, \ensuremath{\sim} & unary minus, negation, bitwise complement \\\hline
+\ttt{-}, \ttt{!}, \ensuremath{\sim} & unary minus, negation, bitwise complement \\\hline
 %%
-{\textasciicircum}      & power-of \\\hline
+\ttt{{\textasciicircum}}         & power-of \\\hline
 %%
-$*$, /, \%              & multiply, divide, modulus \\\hline
+\ttt{*}, \ttt{/}, \ttt{\%}       & multiply, divide, modulus \\\hline
 %%
-+, -                    & add, subtract \\\hline
+\ttt{+}, \ttt{-}                 & add, subtract \\\hline
 %%
-\ttt{<<}, \ttt{>>}      & bitwise shifting \\\hline
+\ttt{<<}, \ttt{>>}               & bitwise shifting \\\hline
 %%
-\&, |, \#               & bitwise and, or, xor \\\hline
+\ttt{\&}, \ttt{|}, \ttt{\#}      & bitwise and, or, xor \\\hline
 %%
-==                      & equal \\
-!=                      & not equal \\
-\ttt{>}, \ttt{>=}       & greater, greater or equal \\
-\ttt{<}, \ttt{<=}       & less, less or equal \\\hline
+\ttt{==}                         & equal \\
+\ttt{!=}                         & not equal \\
+\ttt{>}, \ttt{>=}                & greater, greater or equal \\
+\ttt{<}, \ttt{<=}                & less, less or equal \\\hline
 %%
-\&\&, ||, \#\#          & logical operators and, or, xor \\\hline
+\ttt{\&\&}, \ttt{||}, \ttt{\#\#} & logical operators and, or, xor \\\hline
 %%
-?:                      & the C/C++ ``inline if'' \\\hline
+\ttt{?:}                         & the C/C++ ``inline if'' \\\hline
 \end{longtable}
 
 
